edited project values

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="projects">
         <div class="projects-header">
           <p>Projects</p>
-          <p>Directors</p>
+          <p>Architects</p>
         </div>
       </div>
       <div class="loader">
